# sipxplugin

./: .gitignore  Makefile  Makefile.in  README.markdown  configure.ac  rebar.config
attic/: spx_agentconfig_loader.erl  spx_agentweb_loader.erl  spx_webmgt_loader.erl
etc/: sipxopenacd.cf  sipxopenacd.cfdat.in
specs/: sipxopenacd.spec.in
src/: oacd_spx.app.src  oacd_spx.app.src.in  oacd_spx_app.erl  sipxplugin.app.src  sipxplugin.erl  sipxplugin_app.erl  sipxplugin_poller.erl  spx_agent_auth.erl  spx_autoloader.erl  spx_call_queue_config.erl  spx_cdr_mongo.erl  spx_cdr_mongo_loader.erl  spx_db_connection.erl  spx_dialplan_loader.erl  spx_freeswitchmedia_loader.erl  spx_log_loader.erl  spx_queue_loader.erl  spx_util.erl
